fixed mediaquery spacing

--- a/src/components/InvestorDetailView.css
+++ b/src/components/InvestorDetailView.css
@@ -123,15 +123,15 @@
     .box_i-text{
         font-size: 13px ;
         font-weight: 400;
-        margin: 1% 0%;
-        padding: 1% 18%; 
+        margin: 2% 0%;
+        padding: 2% 2%; 
     }
 
     .invest-details{
         font-weight: 400;
         font-size: 13px;
-        margin: 1% 0%;
-        padding: 1% 18%; 
+        margin: 2% 0%;
+        padding: 2% 15%; 
     }
     
     .invest-list-details{
